# SuggestiveContours

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  rtsc  test_freeglut.cmake
.github/workflows/: ci.yml
docs/: UserGuide.md
src/: apparentridge.cc  rtsc.cc
tests/: test_basic.py
trimesh2/: CMakeLists.txt
trimesh2/gluit/: glui.cpp  glui_control.cpp  glui_spinner.cpp
trimesh2/include/: Vec.h
